--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
-    <meta name="WebStudio" content="Effective Solutions for your Business" />
+    <meta name="JavaScript Practice" content="JavaScript Practice Code" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet" />
+        rel="stylesheet" /> -->
+
+    <!-- <link rel="stylesheet" href="./css/main.min.css" /> -->
 
     <title>JavaScript Practice</title>
 </head>
 
 <body>
    
-<link href="./js/js.js /">
+<script defer src="./js/js.js"></script>
+
 </body>
+
 </html>
